corrected the alignment  of the footer

--- a/style.css
+++ b/style.css
@@ -624,6 +624,9 @@ button:hover{
         margin-top: 5rem;
         margin-bottom: 15rem;
     }
+    .footer-nav .more_socials a{
+        margin-left: 0;
+    }
     .footer h5{
         font-size: 5rem;
     }
